--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJETO REDES SOCIAIS</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <h1>testando pagina</h1>
+    <main>
+        <section id="telefone" >
+
+        </section>
+
+        <section id="icones" >
+
+
+        </section>
+    </main>
     
 </body>
 </html>
