--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <main>
         <section id="telefone" >
 <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+navegador não compativel com iframe
         </section>
 
         <section id="icones" >
-
-
+            <a href="#" target="" > <img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="#" target=""><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="#" target=""><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="#" target=""><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target=""><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="#" target=""><img src="imagens/logo-twitter.jpg" alt=""></a>
         </section>
     </main>
     
