--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <main>
         <section id="telefone" >
-<iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
-navegador não compativel com iframe
+<iframe src="home.html" name="tela" id="tela" frameborder="0">navegador não compativel com iframe</iframe>
+
         </section>
 
         <section id="icones" >
-            <a href="#" target="" > <img src="imagens/logo-home.jpg" alt=""></a><br>
-            <a href="#" target=""><img src="imagens/logo-facebook.jpg" alt=""></a><br>
-            <a href="#" target=""><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="home.html" target="tela" > <img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a><br>
+            <a href="instagran.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
             <a href="#" target=""><img src="imagens/logo-youtube.jpg" alt=""></a><br>
             <a href="#" target=""><img src="imagens/logo-github.jpg" alt=""></a><br>
             <a href="#" target=""><img src="imagens/logo-twitter.jpg" alt=""></a>
